--- a/rrhh/src/main/resources/application.properties
+++ b/rrhh/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url = jdbc:mysql://localhost:3306/rrhh_ada?serverTimezone=UTC
+spring.datasource.username = blue
+spring.datasource.password = 7890
+spring.jpa.show-sql = false
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
